Add JCEF WebView implementation